bug connected with test run title not clickable area on tablet screen was fixed

--- a/client/styles/layout/test-run-card.scss
+++ b/client/styles/layout/test-run-card.scss
@@ -271,7 +271,10 @@
         display: flex;
         align-items: center;
         margin-right: 10px;
-        z-index: 1;
+        z-index: 2;
+        @media(max-width: $screen-tablet) {
+            z-index: 1;
+        }
         &-wrapper {
             display: flex;
             align-items: center;
